--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,5 +23,5 @@ jobs:
           branch: gh-pages
           folder: dist
           target-folder: dist
-          commit-message: "ci: build bundle and deploy to gh pages"
+          commit-message: "ci: build and deploy to gh pages"
           clean: false
