--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint && npx prettier . --check"
+    "lint": "next lint && npx prettier . --check",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.ts": "npx tsc --noEmit",
+    "*.{js,jsx,ts,tsx}": "npx eslint",
+    "*.{js,jsx,ts,tsx,html,css}": "npx prettier --write"
   },
   "dependencies": {
     "dayjs": "^1.11.11",
+    "husky": "^9.0.11",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
@@ -20,6 +27,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "lint-staged": "^15.2.7",
     "postcss": "^8",
     "prettier": "3.3.2",
     "tailwindcss": "^3.4.1",
