--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint && npx prettier . --check",
+    "test": "jest",
+    "test-watch": "jest --watch",
     "prepare": "husky"
   },
   "lint-staged": {
@@ -22,15 +24,19 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.7",
     "postcss": "^8",
     "prettier": "3.3.2",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.2.2",
     "typescript": "^5"
   }
 }
