--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "test-watch": "jest --watch",
     "prepare": "husky"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
     "*.ts": "npx tsc --noEmit",
     "*.{js,jsx,ts,tsx}": "npx eslint",
@@ -18,7 +23,6 @@
   },
   "dependencies": {
     "dayjs": "^1.11.11",
-    "husky": "^9.0.11",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
@@ -31,6 +35,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "husky": "^4.3.8",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.7",
     "postcss": "^8",
